Create settings view

--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
     <!-- TOOD: Change it later on -->
     <meta
       name="google-signin-client_id"
-      content="https://727394150291-iume5lis17683510qa9u2p9kpckmpnd9.apps.googleusercontent.com"
+      content="727394150291-iume5lis17683510qa9u2p9kpckmpnd9.apps.googleusercontent.com"
     />
 
     <!-- Favicon -->
