--- a/web/index.html
+++ b/web/index.html
@@ -27,11 +27,11 @@
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
     <!-- TOOD: Change it later on -->
-    <meta
+    <!-- <meta
       name="google-signin-client_id"
       content="727394150291-iume5lis17683510qa9u2p9kpckmpnd9.apps.googleusercontent.com"
-      
-    />
+            
+    /> -->
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
